# pv-forecast

./: .gitignore  README-static.md  README.md  Taskfile.yaml  _headers  app.py  index.html  pyproject.toml  script.js  style.css
static/: index.html  script.js  style.css
