[project]
name = "pv-forecast"
version = "0.1.0"
description = "A simple PV forecast calculator."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "geopy",
    "openmeteo-requests",
    "requests-cache",
    "retry-requests",
    "pandas",
    "numpy",
]
